2010-11-25  Sam Steingold  <sds@gnu.org>

	* init.lisp, constsym.d (stream-handles): move from SOCKET to EXT

2010-11-21  Sam Steingold  <sds@gnu.org>

	* makemake.in: use ${MODULESDIR_} instead of ${SRCTOPDIR}modules

2010-11-14  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: thread safe GENSYM and GENTEMP
	* lispbibl.d (gensym_lock, gentemp_lock): add locks guarding gensym and
	gentemp counters
	* spvw.d (init_multithread): initialize gensym_lock and gentemp_lock
	* defs1.lisp (GENTEMP): remove. implemented in C
	* subr.d, constsym.d: add GENTEMP to subr and symbol tables
	* constobj.d: add gentemp prefix and counter to object table
	* threads.lisp (*DEFAULT-SPECIAL-BINDINGS*): remove *gensym-counter*
	* symbol.d: define gensym_lock, gentemp_lock
	(GENSYM): re-implement. lock *gensym-counter* increment
	(GENTEMP): implement in C

2010-11-08  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (check_sockopt_name): add
	(get_sock_opt, set_sock_opt): use it instead of NOTREACHED

2010-10-30  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: add optional :TEST predicate to MT:EXEMPTION-WAIT
	* subr.d, subrkw.d (EXEMPTION-WAIT): accept optional :TEST argument
	* xthread.d (xcondition_wait): accept timeout as void pointer. with
	POSIX_THREADS it is absolute struct timespec, with WIN32_THREADS it is
	unsigned integer specifying milliseconds to wait
	* zthread.d (EXEMPTION-WAIT): loop until :TEST predicate is satisfied
	thus simplifies EXEMPTION-WAIT usage with POSIX_THREADS where spurious
	wakeups are possible
	(xcondition_wait): handle timeout parameter properly

2010-10-28  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/bdb.c (time_stamp): make "prefix" const to avoid
	warning: deprecated conversion from string constant to 'char*'
	* modules/syscalls/calls.c (POSIX:FILE-TREE-WALK): add a cast to
	fix g++ compilation

2010-10-27  Bruno Haible  <bruno@clisp.org>

	* clhs.lisp (*browsers*): Add :firefox-window and :firefox-tab.
